# rfluids

./: .cspell.json  .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: build-and-tests.yml  build-coolprop-binaries.yml  ci.yml  fmt.yml  msrv.yml  publish.yml
.zed/: settings.json  tasks.json
coolprop-sys/: Cargo.toml  CoolPropLib.h  README.md  build.rs  wrapper.h
coolprop-sys-linux-aarch64/: Cargo.toml  README.md  build.rs
coolprop-sys-linux-aarch64/src/: lib.rs
coolprop-sys-linux-x86-64/: Cargo.toml  README.md  build.rs
coolprop-sys-linux-x86-64/src/: lib.rs
coolprop-sys-macos-aarch64/: Cargo.toml  README.md  build.rs
coolprop-sys-macos-aarch64/src/: lib.rs
coolprop-sys-macos-x86-64/: Cargo.toml  README.md  build.rs
coolprop-sys-macos-x86-64/src/: lib.rs
coolprop-sys-windows-aarch64/: Cargo.toml  README.md  build.rs
coolprop-sys-windows-aarch64/lib/: CoolProp.lib
coolprop-sys-windows-aarch64/src/: lib.rs
coolprop-sys-windows-x86-64/: Cargo.toml  README.md  build.rs
coolprop-sys-windows-x86-64/lib/: CoolProp.lib
coolprop-sys-windows-x86-64/src/: lib.rs
coolprop-sys/native/include/: CoolPropLib.h
coolprop-sys/native/lib/win-aarch64/: CoolProp.lib
coolprop-sys/native/lib/win-x86-64/: CoolProp.lib
coolprop-sys/src/: bindings.rs  bindings_generated.rs  lib.rs
fluids-rs/: Cargo.toml
fluids-rs/src/: lib.rs  native.rs
fluids-rs/src/enums/: humid_air_parameters.rs  input_pairs.rs  mod.rs  parameters.rs  phases.rs  substances.rs
fluids-rs/src/native/: common.rs  enums.rs  high_level_api.rs  low_level_api.rs  mod.rs
fluids-rs/src/native/enums/: humid_air_parameters.rs  input_pairs.rs  mod.rs  parameters.rs  phases.rs
rfluids/: Cargo.toml
rfluids/src/: cache.rs  error.rs  errors.rs  lib.rs  ops.rs  prelude.rs  state_variant.rs  test.rs
rfluids/src/config/: declare.rs  mod.rs
rfluids/src/enums/: humid_air_param.rs  humid_air_parameters.rs  humid_air_params.rs  input_pair.rs  input_pairs.rs  mod.rs  param.rs  parameters.rs  params.rs  phase.rs  phases.rs  substances.rs
rfluids/src/enums/substance/: binary_mix.rs  mod.rs  pure.rs  refrigerant.rs
rfluids/src/fluid/: backend_name.rs  common.rs  defined.rs  invariant.rs  mod.rs  request.rs  requests.rs  substance_variant.rs  undefined.rs  undefined_state.rs
rfluids/src/fluid/backend/: base.rs  default.rs  mod.rs  tabular.rs
rfluids/src/humid_air/: common.rs  defined.rs  invariant.rs  mod.rs  request.rs  requests.rs  undefined.rs
rfluids/src/io/: config.rs  fluid_input.rs  fluid_input_pair.rs  fluid_param.rs  global_param.rs  humid_air_input.rs  humid_air_param.rs  input.rs  input_pair.rs  mod.rs  param.rs  phase.rs  substance_param.rs  update_request.rs
rfluids/src/native/: common.rs  high_level_api.rs  low_level_api.rs  mod.rs  utils.rs
rfluids/src/substance/: backend_name.rs  binary_mix.rs  custom_mix.rs  default_backend_name.rs  incomp_pure.rs  mod.rs  predefined_mix.rs  pure.rs  refprop_refrigerants.txt  refrigerant.rs  with_backend.rs
rfluids/src/uom_ext/: compressibility_coefficient.rs  kinematic_viscosity.rs  mod.rs  pressure_coefficient.rs  surface_tension.rs
rfluids/tests/: config.rs  native_config.rs  native_config_invalid.rs  set_config.rs  set_config_invalid.rs
