[workspace]
resolver = "3"
members = ["coolprop-sys", "rfluids"]

[workspace.package]
authors = ["Vladimir Portyanikhin <v.portyanikhin@ya.ru>"]
edition = "2024"
rust-version = "1.85.0"
homepage = "https://github.com/portyanikhin/rfluids"
repository = "https://github.com/portyanikhin/rfluids"
license = "MIT"

[workspace.dependencies]
approx = "0.5.1"
bindgen = "0.71.1"
libloading = "0.8.6"
paste = "1.0.15"
rayon = "1.10.0"
rstest = "0.25.0"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
