[workspace]
resolver = "3"
members = [
    "coolprop-sys",
    "coolprop-sys-linux-x86-64",
    "coolprop-sys-macos-aarch64",
    "coolprop-sys-macos-x86-64",
    "coolprop-sys-windows-aarch64",
    "coolprop-sys-windows-x86-64",
    "rfluids",
]

[workspace.package]
authors = ["Vladimir Portyanikhin <v.portyanikhin@ya.ru>"]
edition = "2024"
rust-version = "1.85.0"
homepage = "https://github.com/portyanikhin/rfluids"
repository = "https://github.com/portyanikhin/rfluids"
license = "MIT"

[workspace.dependencies]
approx = "0.5"
bindgen = "0.72"
bon = "3.8"
libloading = "0.8"
paste = "1"
rayon = "1.11"
rstest = "0.26"
serde = { version = "1", features = ["derive"] }
strum = "0.27"
strum_macros = "0.27"
thiserror = "2"
