[package]
name = "coolprop-sys-linux-x86-64"
version = "7.2.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CoolProp native binaries for Linux x86-64"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["CoolProp", "native", "binaries", "Linux", "x86-64"]
categories = ["api-bindings", "science"]

[dependencies]
