[package]
name = "coolprop-sys-macos-aarch64"
version = "6.8.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CoolProp native binaries for macOS AArch64"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["CoolProp", "native", "binaries", "macOS", "AArch64"]
categories = ["api-bindings", "science"]

[dependencies]
