[package]
name = "coolprop-sys-windows-aarch64"
version = "7.2.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CoolProp native binaries for Windows AArch64"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["CoolProp", "native", "binaries", "Windows", "AArch64"]
categories = ["api-bindings", "science"]

[dependencies]
