[package]
name = "coolprop-sys-windows-x86-64"
version = "6.8.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CoolProp native binaries for Windows x86-64"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["CoolProp", "native", "binaries", "Windows", "x86-64"]
categories = ["api-bindings", "science"]

[dependencies]
