[package]
name = "coolprop-sys"
version = "0.1.0-alpha"
authors = ["Vladimir Portyanikhin <v.portyanikhin@ya.ru>"]
edition = "2024"
description = "Raw FFI bindings to CoolProp"
readme = "README.md"
homepage = "https://github.com/portyanikhin/rfluids"
repository = "https://github.com/portyanikhin/rfluids"
license = "MIT"
keywords = ["CoolProp", "ffi", "bindings"]
categories = ["api-bindings", "science"]

[dependencies]
libloading = "0.8.6"

[build-dependencies]
bindgen = "0.71.1"
