[package]
name = "coolprop-sys"
version = "6.7.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Raw FFI bindings to CoolProp"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["CoolProp", "ffi", "bindings"]
categories = ["api-bindings", "science"]

[dependencies]
libloading.workspace = true

[build-dependencies]
bindgen.workspace = true
