[package]
name = "coolprop-sys"
version = "7.2.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Raw FFI bindings to CoolProp"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["CoolProp", "ffi", "bindings"]
categories = ["api-bindings", "science"]

[features]
regen-bindings = ["dep:bindgen"]

[dependencies]
libloading.workspace = true

[build-dependencies]
bindgen = { workspace = true, optional = true }

[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
coolprop-sys-windows-x86-64 = { path = "../coolprop-sys-windows-x86-64", version = "7.2.0" }

[target.'cfg(all(target_os = "windows", target_arch = "aarch64"))'.dependencies]
coolprop-sys-windows-aarch64 = { path = "../coolprop-sys-windows-aarch64", version = "7.2.0" }

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
coolprop-sys-linux-x86-64 = { path = "../coolprop-sys-linux-x86-64", version = "7.2.0" }

[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
coolprop-sys-macos-x86-64 = { path = "../coolprop-sys-macos-x86-64", version = "7.2.0" }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
coolprop-sys-macos-aarch64 = { path = "../coolprop-sys-macos-aarch64", version = "7.2.0" }
