[package]
name = "fluids-rs"
version = "0.1.0-alpha"
authors = ["Vladimir Portyanikhin <v.portyanikhin@ya.ru>"]
edition = "2021"
description = "Simple, full-featured, lightweight, cross-platform CoolProp wrapper for Rust"
readme = "../README.md"
homepage = "https://github.com/portyanikhin/fluids-rs"
repository = "https://github.com/portyanikhin/fluids-rs"
license = "MIT"
keywords = ["CoolProp", "fluids", "mixtures", "humid-air", "thermodynamics"]
categories = ["api-bindings", "science"]

[dependencies]
coolprop-sys = { path = "../coolprop-sys", version = "0.1.0-alpha" }

[dev-dependencies]
approx = "0.5.1"
rayon = "1.10.0"
rstest = "0.23.0"
