[package]
name = "rfluids"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "🦀 Rusty CoolProp wrapper"
readme = "../README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["CoolProp", "fluids", "mixtures", "humid-air", "thermodynamics"]
categories = ["api-bindings", "science"]

[dependencies]
coolprop-sys = { path = "../coolprop-sys", version = "6.8.0" }
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
paste.workspace = true
rayon.workspace = true
rstest.workspace = true
