[package]
name = "rfluids"
version = "0.2.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "🦀 Rusty CoolProp wrapper"
readme = "../README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["CoolProp", "fluids", "mixtures", "humid-air", "thermodynamics"]
categories = ["api-bindings", "science"]

[dependencies]
bon.workspace = true
coolprop-sys = { path = "../coolprop-sys", version = "7.2.0" }
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true

[features]
regen-bindings = ["coolprop-sys/regen-bindings"]

[dev-dependencies]
approx.workspace = true
paste.workspace = true
rayon.workspace = true
rstest.workspace = true
